# patric-triangles

./: CMakeLists.txt  LICENSE  README.md  auxiliary.cpp  auxiliary.h  compile_and_run.sh  constants.h  facebook_combined.txt  main.cpp
